k8s/deploy/dev/replicas.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec:
  replicas: 0
