k8s/deploy/dev/postgre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  replicas: 0
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:15.4
          ports:
            - containerPort: 5432
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
    - port: 5432
      targetPort: 5432
