k8s/deploy/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'  
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/subnets: subnet-05e02948dfb87e484, subnet-0ee67dfd8bee0fc38, subnet-0e0621d622486108b
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: "80"    
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:216989136189:certificate/6e3207c2-a1d1-4745-81d9-f517eba3dacf"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'     
    alb.ingress.kubernetes.io/group.name: grupo-ingress-2     
spec:
  ingressClassName: alb  
  rules:
  - host: dev.app.wsnobrega.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-reviewfilmes
            port: 
              number: 80
